codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_uses_runtime_preview_values.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view, 72)"
---
                                                                        
  配 置 状 态 栏                                                             
  选 择 要 在 状 态 栏 中 显 示 的 项 目 。                                           
                                                                        
  输 入 以 搜 索                                                             
  >                                                                     
› [x] 使 用 主 题 颜 色          应 用 当 前  /theme 的 颜 色                        
  ───────────────────────                                               
  [x] 模 型                  当 前 模 型 名 称                                  
  [x] 当 前 目 录              当 前 工 作 目 录                                  
  [x] Git 分 支              当 前  Git 分 支 （ 不 可 用 时 省 略 ）                 
  [ ] 模 型 与 推 理 强 度        当 前 模 型 名 称 和 推 理 强 度                        
  [ ] 推 理 强 度              当 前 推 理 强 度                                  
  [ ] 项 目                  项 目 名 称 （ 不 可 用 时 省 略 ）                      
                                                                        
  gpt-5-codex · ~/codex-rs · jif/statusline-preview                     
  按  space 切 换 ; ←/→ 移 动 ; enter 确 认 并 关 闭 ; esc 关 闭
